##Text encoding: utf-8

2009-01-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: implement very basic text edition.
	* libs/gccv/text.h: ditto.
	* libs/gcp/text.cc: use gccv::Anchor.
	* plugins/paint/text/texttool.cc: call gccv::Text::OnKeyPressed when
	appropriate.

2009-01-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* AUTHORS: added the brasilian translator.
	* *.h, *.c, *.cc: fixed FSF address.

2009-01-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: directly call static methods as callbacks.

2009-01-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: changed gcu::Printable API so that it passes
	the page number to DoPrint.
	* libs/gcp/document.h: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/glview.cc: ditto.
	* libs/gcu/glview.h: ditto.
	* libs/gcu/printable.cc: ditto.
	* libs/gcu/printable.h: ditto.
	* libs/gcu/spectrumdoc.cc: ditto.
	* libs/gcu/spectrumdoc.h: ditto.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-curve.h: ditto.
	* libs/gcu/loader.cc: changed API to be able to export just one object
	instead of the whole document.
	* libs/gcu/loader.h: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/loaders/cif/cif.cc: ditto.
	* plugins/loaders/cml/cml.cc: ditto.

2009-01-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/atom.cc: export formal charge.
	* plugins/loaders/cml/cml.cc: ditto and import stereochemistry.

2008-12-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: set a correct scale after a call to
	Application::Load.
	* libs/gcp/bond.cc: export properties.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/document.cc: save using the gcu::Loader mechanism when relevant.
	* libs/gcp/molecule.cc: fix stereochemistry for InChI and SMILES output.
	* libs/gcu/application.cc: use a const document when saving.
	* libs/gcu/application.h: