@@ -26,7 +26,7 @@
 	* New tools:
 		- delocalized bonds (?),
 		- week interactions (e.g. H-bonds) (?),
-		- curved arrows (in mechanisms) (0.12?).
+		- curved arrows (in mechanisms) (0.12).
 		- curved reaction arrows and Tollman's loops (?),
 		- cluster bonds (as in boranes) (?),
 		- electron vacancies (?).
